<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/numero1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numeric="decimal"
        android:inputType="numberDecimal"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="180dp">

        <RadioGroup
            android:id="@+id/radios"
            android:layout_width="fill_parent"
            android:layout_height="180dp">

            <RadioButton
                android:id="@+id/soma"
                android:text="@string/somar"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"

                />
            <RadioButton
                android:id="@+id/subtrair"
                android:text="@string/subtrair"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"


                />
            <RadioButton
                android:id="@+id/multiplicar"
                android:text="@string/multiplicar"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"


                />
            <RadioButton
                android:id="@+id/dividir"
                android:text="@string/dividir"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"


                />
        </RadioGroup>
    </LinearLayout>
    <EditText
        android:id="@+id/numero2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numeric="decimal"
        android:inputType="numberDecimal"
        />
    <Button

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/Button"
        android:onClick="calcular"
        />
    <TextView
        android:id="@+id/resultados"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textSize="40dp"
        android:text=""
        />
</LinearLayout>
